depend upon libraries api

--- a/slick.info.yml
+++ b/slick.info.yml
@@ -4,3 +4,4 @@ description: 'Provides a field formatter, Views plugin, and Configuration entity
 package: Slideshows
 core: 8.x
 dependencies:
+  -libraries
